# rural_alberta_health_connect_mobile

./: .easignore  .env.development  .env.example  .env.local.example  .env.production  .gitignore  AI_ASSESSMENT_FLOW_ANALYSIS.md  ANDROID_PUSH_NOTIFICATIONS.md  CLAUDE.md  FIREBASE_IMPLEMENTATION_STATUS.md  FIREBASE_QUICKSTART.md  FIXES_AI_ASSESSMENT_LOGGING.md  OFFLINE_IMPLEMENTATION_COMPLETE.md  PROJECT_README.md  PUSH_NOTIFICATIONS_STATUS.md  README.md  REBUILD_INSTRUCTIONS.md  REBUILD_REQUIRED.md  TESTING_GUIDE_SPRINT1.md  USER_GUIDE.md  app.json  babel.config.js  eas.json  fix-dates.ts  google-services.json  metro.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.json
.claude/: settings.local.json
.demo/: RAHC-SPrint2.json
.demo/slides/: 01-offline-first-watermelondb.md  02-mapbox-address-autocomplete.md  03-phone-validation-system.md  04-multi-photo-ai-assessment.md  05-photo-upload-validation.md  06-custom-modal-design.md  07-section-specific-validation.md  08-search-functionality.md  09-signup-form-context.md  10-password-realtime-feedback.md  11-authentication-flow-fixes.md  12-ui-polish.md  README.md
.github/workflows/: native-build.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
app/: _layout.tsx  index.tsx  location-services.tsx  onboarding.tsx  resources.tsx
app/(tabs)/: dashboard.tsx  notifications.tsx
app/_config/: mapbox.config.ts
app/_context/: HealthEntriesEvents.ts
app/_utils/: NotificationBellEvent.ts  mapboxFix.ts  notifications.ts
app/auth/: SignUpFormContext.tsx  emergency-contact.tsx  forgot-password.tsx  medical-history.tsx  personal-info.tsx  privacy-policy.tsx  signin.tsx  signup.tsx  terms-of-service.tsx
app/components/: AuthWrapper.tsx  DueReminderBanner.tsx  HealthStatusTag.tsx  MapboxOfflineMap.tsx  NotificationBanner.tsx  NotificationBell.tsx  NotificationContext.tsx  NotificationList.tsx  OfflineBanner.tsx  OfflineMap.tsx  OfflineMapDownloader.tsx  ScanningOverlay.tsx  SideMenu.tsx  SideMenuProvider.tsx  SpeechToTextButton.tsx  StatusModal.tsx  SyncProvider.tsx  TTSButton.tsx  TTSHighlightedText.tsx  TimePickerModal.tsx  bottomNavigation.tsx  curvedBackground.tsx  curvedHeader.tsx
app/config/: mapbox.config.ts
app/constants/: constants.js  constants.ts
app/find-care/: [id].tsx  _layout.tsx  clinics.tsx  index.tsx
app/hooks/: useNetworkStatus.ts  useSyncOnOnline.ts
app/location-services/: index.tsx
app/profile/: complete.tsx  debugging-profile.tsx
app/resources/: index.tsx
app/utils/: firebase.ts  firebaseNotifications.ts  notifications.ts  onesignal.ts  pushNotifications.ts  securePhone.ts
assets/models/: metadata.yaml
assets/rive/: scanner.riv
convex/: BrevoOTPPasswordReset.ts  README_ARCHITECTURE.md  README_RESOURCES.md  ResendOTPPasswordReset.ts  aiAssessment.ts  auth.ts  feedbackActions.ts  healthEntries.ts  locationServices.ts  notificationExamples.ts  notifications.ts  passwordReset.ts  resources.ts  schema.ts  seedResourcesData.ts  sync.ts  user.ts  userProfile.ts  userProfiles.ts  users.ts
convex/_generated/: api.d.ts
convex/dashboard/: user.ts
convex/emergencyContact/: index.ts  update.ts
convex/locationServices/: locationServices.ts
convex/medicalHistory/: index.ts  update.ts
convex/model/: personalInfomation.ts  user.ts  userProfile.ts
convex/personalInfo/: index.ts  info.ts  update.ts
convex/personalInfoOnboarding/: update.ts
convex/profile/: ensureProfileExists.ts  index.ts  personalInfomation.ts  personalInformation.ts  reminders.ts
convex/utils/: sanitize.ts
doc/log/: 2025-12-12-rebase-on-device-llm.md
docs/: FIREBASE_IMPLEMENTATION.md  FIREBASE_PUSH_SETUP.md  SCHEMA_MIGRATION_ANALYSIS.md  SPRINT2_COMPLETE_REPORT.md  USER_GUIDE.md  WATERMELONDB_COMPREHENSIVE_GUIDE.md  ci-build-optimization.md  clinic-caching-system.md  developer-setup.md  firebase-setup.md  notification-list-usage.md  offline-maps-mapbox.md
docs/ai-integration/: 20250929-102000-tflite-integration.md  20251004_225212_on-device-llm-implementation-log.md  20251005_153502_visioncamera-tflite-integration-guide.md  20251005_161800_visioncamera-frame-processors-complete-reference.md  20251005_171500_skia-tflite-detection-handoff.md  20251006_001649_worklet-to-js-bridge.md  20251006_143817_vision-llm-integration-current-state.md  Sep29-TFLite-Integration.md  vision-camera.md
docs/app-flow/: 00-components.md  01-onboarding.md  02-authentication-flow.md  04-ai-assessment-flow.md  05-health-tracker.md  06-emergency.md  07-profile.md  08-terms-of-service.md  dashboard.md
docs/architecture/: decision-history.md  diagrams.md  llm-singleton-pattern.md
docs/auth/: 20250920-221042-collecting-signup-data.md  20250920-221042-profile-collection.md  20250920-221042-rbac.md  20250920-221042-session-timing-issue.md  20250922-154128-session-refresh-workaround.md  20250930-204827-profile-mutations-usage.md  20251001-100411-authguard-removal-and-onboarding-state-analysis.md  README.md  collecting-signup-data.md  profile-collection.md  profile-mutations-usage.md  rbac.md  session-refresh-workaround.md  (+1 more)
native/dummy-detector/android/src/main/cpp/: CMakeLists.txt  DummyDetector.cpp  ncnn_wrapper.cpp  ncnn_wrapper.h
plugins/: onnxRuntime.js  withAndroidXFix.js  withExecuTorchiOSExclude.js  withGoogleServices.js  withOnnxRuntime.js
scripts/: write-google-services.js
(+161 files in other folders)
